fix alignment issue

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ html {
     background-color: var(--primary-background-color);
     font-family: var(--primary-font);
     display: var(inline-block);
-    text-align: var() ;
+    text-align: var(--primary-text-alignment);
 }
 
 section {
